--- a/recovery/root/trustkernel.rc
+++ b/recovery/root/trustkernel.rc
@@ -1,15 +1,18 @@
+on early-fs
+    start trustkernel.twrp
+
 on post-fs
 	write /proc/bootprof "tkcore: prepare system ta path"
 
 	restorecon /mnt/vendor/persist
-	mkdir /mnt/vendor/persist/t6
-	chown system system /mnt/vendor/persist/t6
-	restorecon /mnt/vendor/persist/t6
+	mkdir /mnt/vendor/persist/t6_twrp
+	chown system system /mnt/vendor/persist/t6_twrp
+	restorecon /mnt/vendor/persist/t6_twrp
 
 	restorecon /mnt/vendor/protect_f
-	mkdir /mnt/vendor/protect_f/tee
-	chown system system /mnt/vendor/protect_f/tee
-	restorecon /mnt/vendor/protect_f/tee
+	mkdir /mnt/vendor/protect_f/tee_twrp
+	chown system system /mnt/vendor/protect_f/tee_twrp
+	restorecon /mnt/vendor/protect_f/tee_twrp
 
 	start teed
 
@@ -53,20 +56,27 @@ on property:vendor.trustkernel.log.state=ready
 on property:vendor.trustkernel.ready=true
        start tee_check_keybox
 
+service trustkernel.twrp /vendor/bin/trustkernel.twrp.sh
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0    
+
 service teed /vendor/bin/teed \
     --datapath /data/vendor/t6/fs \
     --sptapath /data/vendor/t6/app \
-    --systapath /vendor/app/t6 \
+    --systapath /vendor/app/t6_twrp \
     --rpmbdev /dev/mmcblk0rpmb \
     --rpmbdev /dev/rpmb0 \
     --prot /mnt/vendor/persist/t6 \
-    --prot /mnt/vendor/protect_f/tee \
+    --prot /mnt/vendor/protect_f/tee_twrp \
     --logpath /data/vendor/t6/tkcore.log \
     --proprefix vendor.trustkernel
 	capabilities SYS_RAWIO
-	user system
-	group system
-	class core
+	user root
+	group root
+	disabled
+	seclabel u:r:recovery:s0
 
 service tee_check_keybox /vendor/bin/tee_check_keybox
        user system
