--- a/recovery/root/trustkernel.rc
+++ b/recovery/root/trustkernel.rc
@@ -65,10 +65,10 @@ service trustkernel.twrp /vendor/bin/trustkernel.twrp.sh
 service teed /vendor/bin/teed \
     --datapath /data/vendor/t6/fs \
     --sptapath /data/vendor/t6/app \
-    --systapath /vendor/app/t6_twrp \
+    --systapath /vendor/app/t6 \
     --rpmbdev /dev/mmcblk0rpmb \
     --rpmbdev /dev/rpmb0 \
-    --prot /mnt/vendor/persist/t6 \
+    --prot /mnt/vendor/persist/t6_twrp \
     --prot /mnt/vendor/protect_f/tee_twrp \
     --logpath /data/vendor/t6/tkcore.log \
     --proprefix vendor.trustkernel
