--- a/recovery/root/trustkernel.rc
+++ b/recovery/root/trustkernel.rc
@@ -1,18 +1,15 @@
-on early-fs
-    start trustkernel.twrp
-
 on post-fs
 	write /proc/bootprof "tkcore: prepare system ta path"
 
 	restorecon /mnt/vendor/persist
-	mkdir /mnt/vendor/persist/t6_twrp
-	chown system system /mnt/vendor/persist/t6_twrp
-	restorecon /mnt/vendor/persist/t6_twrp
+	mkdir /mnt/vendor/persist/t6
+	chown system system /mnt/vendor/persist/t6
+	restorecon /mnt/vendor/persist/t6
 
 	restorecon /mnt/vendor/protect_f
-	mkdir /mnt/vendor/protect_f/tee_twrp
-	chown system system /mnt/vendor/protect_f/tee_twrp
-	restorecon /mnt/vendor/protect_f/tee_twrp
+	mkdir /mnt/vendor/protect_f/tee
+	chown system system /mnt/vendor/protect_f/tee
+	restorecon /mnt/vendor/protect_f/tee
 
 	start teed
 
@@ -56,23 +53,16 @@ on property:vendor.trustkernel.log.state=ready
 on property:vendor.trustkernel.ready=true
        start tee_check_keybox
 
-service trustkernel.twrp /vendor/bin/trustkernel.twrp.sh
-    user root
-    group root
-    disabled
-    seclabel u:r:recovery:s0    
-
 service teed /vendor/bin/teed \
     --datapath /data/vendor/t6/fs \
     --sptapath /data/vendor/t6/app \
     --systapath /vendor/app/t6 \
     --rpmbdev /dev/mmcblk0rpmb \
     --rpmbdev /dev/rpmb0 \
-    --prot /mnt/vendor/persist/t6_twrp \
-    --prot /mnt/vendor/protect_f/tee_twrp \
+    --prot /mnt/vendor/persist/t6 \
+    --prot /mnt/vendor/protect_f/tee \
     --logpath /data/vendor/t6/tkcore.log \
     --proprefix vendor.trustkernel
-	capabilities SYS_RAWIO
 	user root
 	group root
 	disabled
