--- a/recovery/root/trustkernel.rc
+++ b/recovery/root/trustkernel.rc
@@ -1,11 +1,17 @@
+service trustkernel.twrp /vendor/bin/trustkernel.twrp.sh
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
 service teed /vendor/bin/teed \
     --datapath /data/vendor/t6/fs \
     --sptapath /data/vendor/t6/app \
     --systapath /vendor/app/t6 \
     --rpmbdev /dev/mmcblk0rpmb \
     --rpmbdev /dev/rpmb0 \
-    --prot /mnt/vendor/persist/t6 \
-    --prot /mnt/vendor/protect_f/tee \
+    --prot /mnt/vendor/persist/t6_twrp \
+    --prot /mnt/vendor/protect_f/tee_twrp \
     --logpath /tmp/tkcore.log \
     --proprefix vendor.trustkernel
     user root
@@ -20,18 +26,21 @@ service tee_check_keybox /vendor/bin/tee_check_keybox
     disabled
     oneshot
 
+on early-fs
+    start trustkernel.twrp
+
 on post-fs
     write /proc/bootprof "tkcore: prepare system ta path"
 
     restorecon /mnt/vendor/persist
-    mkdir /mnt/vendor/persist/t6
-    chown system system /mnt/vendor/persist/t6
-    restorecon /mnt/vendor/persist/t6
+    mkdir /mnt/vendor/persist/t6_twrp
+    chown system system /mnt/vendor/persist/t6_twrp
+    restorecon /mnt/vendor/persist/t6_twrp
 
     restorecon /mnt/vendor/protect_f
-    mkdir /mnt/vendor/protect_f/tee
-    chown system system /mnt/vendor/protect_f/tee
-    restorecon /mnt/vendor/protect_f/tee
+    mkdir /mnt/vendor/protect_f/tee_twrp
+    chown system system /mnt/vendor/protect_f/tee_twrp
+    restorecon /mnt/vendor/protect_f/tee_twrp
 
     start teed
 
